--- a/client/style.css
+++ b/client/style.css
@@ -20,13 +20,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
 }
 
 #chat_container {
   flex: 1;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   overflow-y: scroll;
 
   display: flex;
@@ -38,6 +37,7 @@ body {
 
   padding-bottom: 20px;
   scroll-behavior: auto;
+  margin-bottom: 100px;
 }
 
 /* hides scrollbar */
@@ -89,6 +89,8 @@ body {
 
 .message {
   flex: 1;
+  padding-bottom: 10px;
+  min-height: 50px;
 
   color: #dcdcdc;
   font-size: 20px;
@@ -123,6 +125,9 @@ form {
   display: flex;
   flex-direction: row;
   gap: 10px;
+
+  position: fixed;
+  bottom: 0;
 }
 
 textarea {
